# TTLab

./: CMakeLists.txt  FirstTask.cpp  Parser.cpp  Parser.h  SecondTask.cpp  deducer_test  main.cpp  test
Node/: Application.cpp  Application.h  Lambda.cpp  Lambda.h  Node.h  Variable.cpp  Variable.h
Parser/: Parser.cpp  Parser.h
Unification/: Deducer.cpp  Deducer.h  Equation.h  Type.h
